testdata/golden/sema/invalid/enum_variant_not_found.sg
// Error: variant not found

enum Color = {
    Red,
    Green,
    Blue
}

fn test() {
    let c: int = Color::Yellow;
}
